# tiller-sync

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.claude/: CLAUDE.md
.claude/commands/: changelog.md  clippy.md  wake-up.md
.github/workflows/: rust.yml
data/tests/: mint_transactions_test.csv
docs/: DESIGN.md  DESIGN_TODO.md  SETUP.md
docs/ai/: CHANGELOG_INSTRUCTIONS.md  MARKDOWN.md
src/: amount.rs  args.rs  backup.rs  config.rs  config_file.rs  dir.rs  error.rs  fs.rs  home.rs  import.rs  lib.rs  main.rs  model.rs  test.rs  utils.rs
src/api/: files.rs  mod.rs  oauth.rs  sheet.rs  sheet_test_client.rs  sheet_tests.rs  sheets_client.rs  tiller.rs
src/commands/: auth.rs  delete.rs  init.rs  insert.rs  mcp.rs  mod.rs  query.rs  sync.rs  update.rs
src/db/: mod.rs
src/db/migrations/: migration_01_down.sql  migration_01_up.sql  mod.rs
src/mcp/: mcp_utils.rs  mod.rs  sync.rs  tools.rs
src/mcp/docs/: INSTRUCTIONS.md  INTRO.md
src/model/: amount.rs  auto_cat.rs  category.rs  items.rs  mapping.rs  mod.rs  row_col.rs  transaction.rs
testing/: client-secret.fake.json  mock-up.sh
