[package]
name = "tiller-sync"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tiller"
path = "src/main.rs"

[dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
csv = "1"
dirs = "6"
env_logger = "0.11"
format_num = "0.1"
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
log = "0.4"
oauth2 = "5"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
rust_decimal = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_plain = "1"
sheets = "0.7"
tokio = { version = "1", features = ["full"] }
url = "2"

[dev-dependencies]
tempfile = "3"
