[package]
name = "tiller-sync"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tiller"
path = "src/main.rs"

[dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
csv = "1"
dirs = "6"
format_num = "0.1"
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
oauth2 = "5"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
rust_decimal = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_plain = "1"
# NOTE: We previously depended on the published `sheets = "0.7"` crate from crates.io.
# This Git fork (tag `patch-v1`) is used to pull in local patches that are not yet
# available in an official release of `sheets`. If those changes are upstreamed
# and released, we can migrate back to the crates.io dependency.
# TRACKING: https://github.com/oxidecomputer/third-party-api-clients/issues/112
sheets = { git = "https://github.com/webern/oxide-third-party-api-clients", tag = "patch-v1" }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
uuid = { version = "1.18.1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
