[package]
name = "tiller-sync"
version = "0.1.0"
edition = "2021"
keywords = ["tiller", "finance", "budgeting", "mcp", "ai"]
description = "A tool for downloading, uploading and manipulating Tiller Google sheet data using CLI or MCP"
license = "MIT"

[[bin]]
name = "tiller"
path = "src/main.rs"

[dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env"] }
csv = "1"
dirs = "6"
format_num = "0.1"
hyper = { version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
oauth2 = "5"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
rmcp = { version = "0.12", features = ["server", "transport-io"] }
rust_decimal = "1"
schemars = { version = "1.2", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_plain = "1"
# NOTE: We previously depended on the published `sheets = "0.7"` crate from crates.io.
# This Git fork (tag `patch-v1`) is used to pull in local patches that are not yet
# available in an official release of `sheets`. If those changes are upstreamed
# and released, we can migrate back to the crates.io dependency.
# TRACKING: https://github.com/oxidecomputer/third-party-api-clients/issues/112
sheets = { package = "sheets-patch", version = "0.10.0-patch-v2" }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = "2"
uuid = { version = "1.18.1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
rmcp = { version = "0.12", features = ["client"] }
